--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Linearlayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/com/example/qiancheng/lbstest"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.qiancheng.lbstest.MainActivity">
+    android:layout_height="match_parent" >
 
     <TextView
         android:id="@+id/position_text_view"
@@ -13,4 +10,4 @@
         android:layout_height="wrap_content" />
 
 
-</Linearlayout>
+</LinearLayout>
